# playerlogger-rust

./: Cargo.toml  Dockerfile
.github/workflows/: main.yml
src/: main.rs
