[package]
name = "playerlogger-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
mongodb = "2.3.1"
futures = "0.3.17"
chrono = "0.4.22"

[dependencies.bson]
version = "2.4.0"
features = ["chrono-0_4"]

[dependencies.tokio]
version = "1.24"
features = ["full"]