[package]
name = "playerlogger-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
mongodb = "2.7"
futures = "0.3"
chrono = "0.4"

[dependencies.bson]
version = "2.7"
features = ["chrono-0_4"]

[dependencies.tokio]
version = "1.33"
features = ["full"]
